--- a/index.html
+++ b/index.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Best Stocks Expert</title>
+    <title>Best Cricket Tips</title>
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css"
         integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
-    <link rel="stylesheet" href="index.css">
-<!-- Meta Pixel Code -->
+    <link rel="stylesheet" href="index.css">   
+     <!-- Meta Pixel Code -->
 <script>
 !function(f,b,e,v,n,t,s)
 {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
@@ -20,40 +21,48 @@ n.queue=[];t=b.createElement(e);t.async=!0;
 t.src=v;s=b.getElementsByTagName(e)[0];
 s.parentNode.insertBefore(t,s)}(window, document,'script',
 'https://connect.facebook.net/en_US/fbevents.js');
-fbq('init', '1400538591223217');
+fbq('init', '1162676388934901');
 fbq('track', 'PageView');
 </script>
 <noscript><img height="1" width="1" style="display:none"
-src="https://www.facebook.com/tr?id=1400538591223217&ev=PageView&noscript=1"
+src="https://www.facebook.com/tr?id=1162676388934901&ev=PageView&noscript=1"
 /></noscript>
-<!-- End Meta Pixel Code -->
+<!-- End Meta Pixel Code -->    
 </head>
+
 <body>
-    <video autoplay muted loop playsinline id="bg-video">
-        <source src="./video-1.mp4" type="video/mp4">
-        Your browser does not support HTML5 video.
-    </video>
-    <div class="container">
-        <h1> 👑 DEEPAK WADHAWA LOSS RECOVERY OFFICIAL CHANNEL 👑 </h1>
-        <a href="https://t.me/+OilHA5Gpz4hjMGRl" class="btn">
-            <i class="fa-brands fa-telegram"></i>
-            JOIN TELEGRAM FREE
-        </a>
-        <img src="./deepak.png" alt="Profile" class="profile-img">
-        <h5 style="margin-top: 6%; font-size: 95%; color: #C2FF00;"> STOCK MARKET BANKNIFTY FOREX TRADING </h5>
-        <h6 style="margin-top: 6%; font-size: 95%; background-color: azure; color: black; padding: 10px; border-radius: 50px;">
-            🇮🇳  इस चैनल पर आपकी समस्या का समाधान हो जाएगा अगर आप जरूरतमंद है तो विश्वास कर लेना क्योंकि विश्वास न करने पर मेरा कोई नुकसान नहीं है आपका ही नुकसान है आपने वैसे भी तो हजारों लाखों रुपया बर्बाद किया है हमारे टेलीग्राम चैनल से जुड़े.  🇮🇳 </h6>
-        <a href="https://t.me/+OilHA5Gpz4hjMGRl" class="btn">
-            <i class="fa-brands fa-telegram"></i>
-            JOIN TELEGRAM FREE
-        </a>
-        <h5 style="margin-bottom: 80%; margin-top: 6%; font-size: 95%; color: #C2FF00;"> SEBI REGISTER TRADER</h5>
+     <div class="container">
+        <img src="./ntr.png" alt="Profile" class="profile-img">
+        <h1> NTR CRICKET ANALYST 🏏</h1>
+        <div><span id="subscriberCount">0</span> Subscribers</div>
+
+        <div class="section">👑ASIA's NO 1 TIPPER 👑</div>
+        <div class="section">Join now to play for free</div>        
+        <a href="https://t.me/+zya5Sb-2ddVhNzE1" class="btn">
+            <i class="fa-brands fa-telegram"></i> 
+            Join Free Telegram Channel
+            
+        </a> 
+        <div class="section">JOIN INDIA'S BEST TIPPER</div>        
+        <a href="https://t.me/+zya5Sb-2ddVhNzE1" class="btn">
+            <i class="fa-brands fa-telegram"></i> 
+            Join Free Telegram Channel
+        </a> 
+
+        <div class="section">100/99 MATCHED PASSED</div>
+        <br>
+         <br>
+         <!-- <a href="https://wa.me/+917891937090" class="whatsapp-btn">
+            <i class="fa-brands fa-whatsapp"></i>  
+            For AD Promotion Contact me.
+        </a>  -->
     </div>
 </body>
 <script>
     function animateCount(target, endValue, duration) {
         let startValue = 0;
         let startTime = null;
+
         function updateCount(timestamp) {
             if (!startTime) startTime = timestamp;
             let progress = timestamp - startTime;
@@ -66,14 +75,14 @@ src="https://www.facebook.com/tr?id=1400538591223217&ev=PageView&noscript=1"
                 requestAnimationFrame(updateCount);
             }
         }
+
         requestAnimationFrame(updateCount);
     }
+
     window.onload = function () {
         let counterElement = document.getElementById("subscriberCount");
         animateCount(counterElement, 105998, 5000); // 5 seconds duration
     };
 </script>
+
 </html>
-
-
-
