--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@ src="https://www.facebook.com/tr?id=1162676388934901&ev=PageView&noscript=1"
 
         <div class="section">👑ASIA's NO 1 TIPPER 👑</div>
         <div class="section">Join now to play for free</div>        
-        <a href="https://t.me/+zya5Sb-2ddVhNzE1" class="btn">
+        <a href="https://t.me/+Yu1s25etuXw5MzU1" class="btn">
             <i class="fa-brands fa-telegram"></i> 
             Join Free Telegram Channel
             
         </a> 
         <div class="section">JOIN INDIA'S BEST TIPPER</div>        
-        <a href="https://t.me/+zya5Sb-2ddVhNzE1" class="btn">
+        <a href="https://t.me/+Yu1s25etuXw5MzU1" class="btn">
             <i class="fa-brands fa-telegram"></i> 
             Join Free Telegram Channel
         </a> 
@@ -86,3 +86,4 @@ src="https://www.facebook.com/tr?id=1162676388934901&ev=PageView&noscript=1"
 </script>
 
 </html>
+
